--- a/FrameworkExpresiones/FrameworkExpresiones.csproj
+++ b/FrameworkExpresiones/FrameworkExpresiones.csproj
@@ -78,7 +78,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Scripts\jquery-3.1.1.intellisense.js" />
+    <Content Include="App.js" />
     <Content Include="index.html" />
+    <Content Include="Scripts\jquery-htmplate.js" />
     <Content Include="Scripts\jquery-3.1.1.js" />
     <Content Include="Scripts\jquery-3.1.1.min.js" />
     <Content Include="Scripts\jquery-3.1.1.slim.js" />
